13.2 ArrayList, List, Обобщения